<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:background="@drawable/rectangle_card_view"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="125dp"
        android:id="@+id/amount"
        android:layout_height="wrap_content"
        android:text="$20000"
        android:layout_marginTop="16dp"
        android:layout_marginStart="25dp"
        android:textSize="30sp"
        android:fontFamily="@font/inter_bold"/>

    <TextView
        android:layout_width="170dp"
        android:id="@+id/category"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/amount"
        android:text="@string/grocery"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        android:textSize="15sp"
        android:fontFamily="@font/inter_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/date"
        android:layout_height="wrap_content"
        android:text="@string/_14_01_2021"
        android:layout_marginStart="5dp"
        android:layout_toRightOf="@id/amount"
        android:layout_below="@id/category"
        android:textSize="15sp"
        android:fontFamily="@font/inter_medium"/>

    <ImageView
        android:layout_width="40dp"
        android:id="@+id/type"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/category"
        android:layout_marginStart="5dp"
        android:background="@drawable/transaction_plus_button"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/tod" />

</RelativeLayout>